[package]
name = "yaulta"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = { version = "2", features = ["capture-stream"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
etherparse = "0.13"
tabled = "0.14"
chrono = "0.4" 
tokio = { version = "1.46.1", features = ["full"] }
bytes = "1.10.1"
async-nats = "0.42.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
